Fix 'Welcome page no longer shown after closing a book'

KHomeViewPrivate::loadView() did not recognize the case "file close".

BUG: 460368